<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.despegar.scm</groupId>
		<artifactId>scm-master-pom</artifactId>
		<version>2.1.1</version>
	</parent>
	<groupId>com.despegar.university.exercises</groupId>
	<artifactId>concurrence-rooms</artifactId>
	<version>0.1-TEAM_A-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>concurrence-rooms</name>

	<modules>
		<module>concurrence-rooms-domain</module>
		<module>concurrence-rooms-service</module>
	</modules>

	<properties>
		<springframework.version>4.1.5.RELEASE</springframework.version>
		<newrelic.version>3.16.1</newrelic.version>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Nexus Snapshots Repository</name>
			<url>http://vmtilcara.servers.despegar.it:8080/nexus/content/repositories/snapshots</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>8.1.9.v20130131</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-servlet</artifactId>
				<version>8.1.9.v20130131</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-servlets</artifactId>
				<version>8.1.9.v20130131</version>
			</dependency>
			
			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>api-contract</artifactId>
				<version>3.1.2</version>
			</dependency>
			
			<dependency>
				<groupId>com.despegar.cfa.library</groupId>
				<artifactId>cfa-library-cassandra</artifactId>
				<version>1.0.12</version>
			</dependency>
			
			<dependency>
				<groupId>com.despegar.cfa.library</groupId>
				<artifactId>cfa-library-rest</artifactId>
				<version>1.0.39</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.cfa.ids.common</groupId>
				<artifactId>cfa-ids-common-domain</artifactId>
				<version>2.5.5</version>
				<exclusions>
					<exclusion>
						<groupId>com.despegar.cfa.library</groupId>
						<artifactId>cfa-library-rest</artifactId>
					</exclusion>
					<exclusion>
						<groupId>javax.servlet</groupId>
						<artifactId>servlet-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>com.despegar.cfa.library</groupId>
				<artifactId>cfa-library-utils</artifactId>
				<version>1.1.3</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.cloudia</groupId>
				<artifactId>cloudia-cluster-info</artifactId>
				<version>1.0.2</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>routing</artifactId>
				<version>1.1.10</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>logging</artifactId>
				<version>0.0.4</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>threading</artifactId>
				<version>1.0.2</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>health-check</artifactId>
				<version>1.2.0</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-webmvc</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.google.guava</groupId>
						<artifactId>guava</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.newrelic.agent.java</groupId>
						<artifactId>newrelic-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>version</artifactId>
				<version>1.1.6</version>
			</dependency>

			<dependency>
				<groupId>com.despegar.integration</groupId>
				<artifactId>threadpool-newrelic-metrics</artifactId>
				<version>0.3</version>
			</dependency>

	<!-- 		<dependency>
				<groupId>com.despegar.library</groupId>
				<artifactId>hessian</artifactId>
				<version>1.1.3</version>
			</dependency> -->

			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.9.8</version>
			</dependency>

			<dependency>
				<groupId>com.newrelic.agent.java</groupId>
				<artifactId>newrelic-api</artifactId>
				<version>${newrelic.version}</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.0.6</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${springframework.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>14.0</version>
			</dependency>

			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.3.2</version>
			</dependency>

			<dependency>
				<groupId>ma.glasnost.orika</groupId>
				<artifactId>orika-core</artifactId>
				<version>1.4.5</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
			</dependency>

			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>

			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.8.21</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.5</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.unitils</groupId>
				<artifactId>unitils-core</artifactId>
				<version>3.3</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>1.7.2</version>
				<scope>runtime</scope>
			</dependency>

			<dependency>
				<groupId>net.sf.dozer</groupId>
				<artifactId>dozer</artifactId>
				<version>5.4.0</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xmx1536m -XX:MaxPermSize=160M</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<instrumentation>
						<excludes>
							<!-- Exclude all module packages from coverage as they only contains 
								POJOS -->
							<exclude>com/despegar/concurrence/rooms/**/model/**/*.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/oas/connector/*.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/utils/log/*.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/utils/rest/*.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/concurrence/rooms/**/*.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/zookeeper/ZKConnector.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/utils/path/FactoryPath.class</exclude>
							<exclude>com/despegar/concurrence/rooms/domain/utils/string/RandomStringFactory.class</exclude>
							<!-- Web exclude class -->
							<exclude>com/despegar/concurrence/rooms/service/**/*.class</exclude>
						</excludes>
						<ignoreTrivial>true</ignoreTrivial>
					</instrumentation>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<excludes>
						<!-- exclude any logback configuration from the jar -->
						<exclude>**/logback.xml</exclude>
						<!-- exclude any logback configuration from the jar -->
						<exclude>**/version</exclude>
						<!-- this line excludes env folder entirely from the jar -->
						<exclude>**/conf/env/**</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.despegar.deploys</groupId>
				<artifactId>cloudia-java8-plugin</artifactId>
				<version>1.0.12</version>
				<dependencies>
					<dependency>
						<groupId>com.newrelic.agent.java</groupId>
						<artifactId>newrelic-agent</artifactId>
						<version>${newrelic.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- Profile -->
	<profiles>
		<!-- The following is added so release:perform doesn't run tests again 
			after release:prepara. Use release:perform alone with care! -->
		<profile>
			<id>perform-release</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
				<file>
					<exists>release.properties</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<scm>
		<url>git@gitlab.despegar.it:training-hf-dvlp-appls-web-exercises/concurrence-rooms-hotels-beginners.git</url>
		<connection>git@gitlab.despegar.it:training-hf-dvlp-appls-web-exercises/concurrence-rooms-hotels-beginners.git</connection>
		<developerConnection>git@gitlab.despegar.it:training-hf-dvlp-appls-web-exercises/concurrence-rooms-hotels-beginners.git</developerConnection>
	</scm>
</project>
